--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,21 +15,19 @@
 # limitations under the License.
 
 galaxy_info:
+  role_name: etcd
   author: Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
-  description: Ansible Role for etcd Management
+  description: Ansible Role for etcd Installation
   company: PantaRei Design
   license: Apache License 2.0
-  min_ansible_version: 2.4
+  min_ansible_version: 2.6
   platforms:
     - name: Ubuntu
       versions:
-        - trusty
         - xenial
-        - artful
         - bionic
     - name: EL
       versions:
-        - 6
         - 7
   galaxy_tags:
     - system
