--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -87,8 +87,19 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   with_items:
+    - { dest: "/etc/systemd/system/etcd.service" }
     - { dest: "/usr/local/bin/etcd", mode: "0755" }
     - { dest: "/usr/local/bin/etcdctl", mode: "0755" }
+  tags: etcd
+
+- name: pip install
+  pip:
+    name: "{{ item.name | default(None) or omit }}"
+    state: "{{ item.state | default(None) or omit }}"
+    version: "{{ item.version | default(None) or omit }}"
+  with_items: "{{ _pip }}"
+  register: result
+  until: result is succeeded
   tags: etcd
 
 - name: enable service
