--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,7 +54,7 @@
   with_items:
     - { dest: "/lib/systemd/system" }
     - { dest: "/usr/local/bin" }
-    - { dest: "/var/lib/etcd/default" }
+    - { dest: "/var/lib/etcd" }
   tags: etcd
 
 - name: unarchive package
@@ -74,6 +74,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   with_items:
+    - { dest: "/etc/default/etcd" }
     - { dest: "/lib/systemd/system/etcd.service" }
   notify:
     - systemctl daemon-reload
@@ -87,6 +88,7 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   with_items:
+    - { dest: "/etc/default/etcd" }
     - { dest: "/lib/systemd/system/etcd.service" }
     - { dest: "/usr/local/bin/etcd", mode: "0755" }
     - { dest: "/usr/local/bin/etcdctl", mode: "0755" }
