--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -36,11 +36,15 @@
 
     - name: etcdctl put foo bar
       command: etcdctl put foo bar
+      environment:
+        ETCDCTL_API: 3
       register: result
       changed_when: result is not succeeded
 
     - name: etcdctl get foo
       command: etcdctl get foo
+      environment:
+        ETCDCTL_API: 3
       register: result
       changed_when: result is not succeeded
       failed_when: "'bar' not in result.stdout"
