[306] Shells that use pipes should set the pipefail option

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -77,10 +77,12 @@
 
 - name: unarchive package
   shell: |
+    set -o pipefail
     cd /usr/local/bin
     curl -skL {{ etcd_download_url }} | tar zxf - --strip-components=1 --wildcards "etcd*/etcd" "etcd*/etcdctl"
     chown -Rf root:root etcd etcdctl
   args:
+    executable: /bin/bash
     creates: "/usr/local/bin/etcd"
   tags: etcd
 
