--- a/molecule/ubuntu-18.04-multinode/molecule.yml
+++ b/molecule/ubuntu-18.04-multinode/molecule.yml
@@ -23,16 +23,19 @@ platforms:
     url: unix:/var/snap/lxd/common/lxd/unix.socket
     source:
       server: https://images.linuxcontainers.org
+      protocol: simplestreams
       alias: ubuntu/bionic/amd64
   - name: ${LXC_ID}-2
     url: unix:/var/snap/lxd/common/lxd/unix.socket
     source:
       server: https://images.linuxcontainers.org
+      protocol: simplestreams
       alias: ubuntu/bionic/amd64
   - name: ${LXC_ID}-3
     url: unix:/var/snap/lxd/common/lxd/unix.socket
     source:
       server: https://images.linuxcontainers.org
+      protocol: simplestreams
       alias: ubuntu/bionic/amd64
 lint:
   name: yamllint
