--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -75,11 +75,22 @@
     - { dest: "/var/lib/etcd", owner: "etcd", group: "etcd" }
   tags: etcd
 
+- name: download archive
+  get_url:
+    url: "{{ item.url }}"
+    dest: "{{ item.dest }}"
+    checksum: "{{ item.checksum }}"
+  with_items:
+    - "{{ etcd_download }}"
+  register: result
+  until: result is succeeded
+  tags: etcd
+
 - name: unarchive package
   shell: |
     set -o pipefail
     cd /usr/local/bin
-    curl -skL {{ etcd_download_url }} | tar zxf - --strip-components=1 --wildcards "etcd*/etcd" "etcd*/etcdctl"
+    tar zxf {{ etcd_download.dest }} --strip-components=1 --wildcards "etcd*/etcd" "etcd*/etcdctl"
     chown -Rf root:root etcd etcdctl
   args:
     executable: "/bin/bash"
