--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ env:
     - MOLECULE_OPTIONS="-s ubuntu-18.04"
     - MOLECULE_OPTIONS="-s ubuntu-18.04-multinode"
 
+matrix:
+  allow_failures:
+    - env: MOLECULE_OPTIONS="-s centos-7"
+    - env: MOLECULE_OPTIONS="-s suse-15"
+
 before_install:
   - sudo apt-get -y purge lxc-* lxd-* && sudo apt-get -y autoremove
   - sudo snap install lxd && sudo lxd init --preseed < .travis.lxd.yml
