--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -36,17 +36,31 @@
       ignore_errors: true
 
     - name: etcdctl put foo bar
-      command: etcdctl put foo bar
-      environment:
-        ETCDCTL_API: 3
+      shell: |
+        set -o pipefail
+        ETCDCTL_API=3 etcdctl \
+          --cacert=/etc/etcd/pki/ca.crt \
+          --cert=/etc/etcd/pki/server.crt \
+          --endpoints=https://127.0.0.1:2379 \
+          --key=/etc/etcd/pki/server.key \
+          put foo bar
+      args:
+        executable: "/bin/bash"
       when: inventory_hostname == ansible_play_batch[0]
       register: result
       changed_when: result is not succeeded
 
     - name: etcdctl get foo
-      command: etcdctl get foo
-      environment:
-        ETCDCTL_API: 3
+      shell: |
+        set -o pipefail
+        ETCDCTL_API=3 etcdctl \
+          --cacert=/etc/etcd/pki/ca.crt \
+          --cert=/etc/etcd/pki/server.crt \
+          --endpoints=https://127.0.0.1:2379 \
+          --key=/etc/etcd/pki/server.key \
+          get foo
+      args:
+        executable: "/bin/bash"
       register: result
       changed_when: result is not succeeded
       failed_when: "'bar' not in result.stdout"
