--- a/molecule/ubuntu-18.04-multinode/playbook.yml
+++ b/molecule/ubuntu-18.04-multinode/playbook.yml
@@ -17,8 +17,8 @@
 - hosts: all
   remote_user: root
   roles:
-    # - role: bootstrap
-    # - role: python
+    - role: bootstrap
+    - role: python
     - role: etcd
 
 - hosts: all
