--- a/molecule/ubuntu-18.04/playbook.yml
+++ b/molecule/ubuntu-18.04/playbook.yml
@@ -47,7 +47,7 @@
           put foo bar
       args:
         executable: "/bin/bash"
-      when: inventory_hostname == ansible_play_batch[0]
+      when: inventory_hostname == ansible_play_hosts[0]
       register: result
       changed_when: result is not succeeded
 
