--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -267,13 +267,13 @@
     state: "{{ item.state | default('file') }}"
   with_items:
     - { dest: "/etc/default/etcd" }
-    - { dest: "/etc/etcd/pki/ca.crt", owner: "etcd", group: "etcd", mode: "0600" }
+    - { dest: "/etc/etcd/pki/ca.crt", owner: "etcd", group: "etcd" }
     - { dest: "/etc/etcd/pki/ca.csr", owner: "etcd", group: "etcd", mode: "0600" }
     - { dest: "/etc/etcd/pki/ca.key", owner: "etcd", group: "etcd", mode: "0600" }
-    - { dest: "/etc/etcd/pki/peer.crt", owner: "etcd", group: "etcd", mode: "0600" }
+    - { dest: "/etc/etcd/pki/peer.crt", owner: "etcd", group: "etcd" }
     - { dest: "/etc/etcd/pki/peer.csr", owner: "etcd", group: "etcd", mode: "0600" }
     - { dest: "/etc/etcd/pki/peer.key", owner: "etcd", group: "etcd", mode: "0600" }
-    - { dest: "/etc/etcd/pki/server.crt", owner: "etcd", group: "etcd", mode: "0600" }
+    - { dest: "/etc/etcd/pki/server.crt", owner: "etcd", group: "etcd" }
     - { dest: "/etc/etcd/pki/server.csr", owner: "etcd", group: "etcd", mode: "0600" }
     - { dest: "/etc/etcd/pki/server.key", owner: "etcd", group: "etcd", mode: "0600" }
     - { dest: "/lib/systemd/system/etcd.service" }
