better cert permission

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -267,13 +267,13 @@
     state: "{{ item.state | default('file') }}"
   with_items:
     - { dest: "/etc/default/etcd" }
-    - { dest: "/etc/etcd/pki/ca.crt", group: "etcd", mode: "0640" }
+    - { dest: "/etc/etcd/pki/ca.crt", group: "etcd" }
     - { dest: "/etc/etcd/pki/ca.csr", group: "etcd", mode: "0640" }
     - { dest: "/etc/etcd/pki/ca.key", group: "etcd", mode: "0640" }
-    - { dest: "/etc/etcd/pki/peer.crt", group: "etcd", mode: "0640" }
+    - { dest: "/etc/etcd/pki/peer.crt", group: "etcd" }
     - { dest: "/etc/etcd/pki/peer.csr", group: "etcd", mode: "0640" }
     - { dest: "/etc/etcd/pki/peer.key", group: "etcd", mode: "0640" }
-    - { dest: "/etc/etcd/pki/server.crt", group: "etcd", mode: "0640" }
+    - { dest: "/etc/etcd/pki/server.crt", group: "etcd" }
     - { dest: "/etc/etcd/pki/server.csr", group: "etcd", mode: "0640" }
     - { dest: "/etc/etcd/pki/server.key", group: "etcd", mode: "0640" }
     - { dest: "/lib/systemd/system/etcd.service" }
