--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -267,11 +267,11 @@
     state: "{{ item.state | default('file') }}"
   with_items:
     - { dest: "/etc/default/etcd" }
-    - { dest: "/etc/etcd/pki/ca.crt", group: "etcd" }
-    - { dest: "/etc/etcd/pki/peer.crt", group: "etcd" }
-    - { dest: "/etc/etcd/pki/peer.key", group: "etcd", mode: "0640" }
-    - { dest: "/etc/etcd/pki/server.crt", group: "etcd" }
-    - { dest: "/etc/etcd/pki/server.key", group: "etcd", mode: "0640" }
+    - { dest: "/etc/etcd/pki/ca.crt", owner: "etcd", group: "etcd" }
+    - { dest: "/etc/etcd/pki/peer.crt", owner: "etcd", group: "etcd" }
+    - { dest: "/etc/etcd/pki/peer.key", owner: "etcd", group: "etcd", mode: "0600" }
+    - { dest: "/etc/etcd/pki/server.crt", owner: "etcd", group: "etcd" }
+    - { dest: "/etc/etcd/pki/server.key", owner: "etcd", group: "etcd", mode: "0600" }
     - { dest: "/lib/systemd/system/etcd.service" }
     - { dest: "/usr/local/bin/etcd", mode: "0755" }
     - { dest: "/usr/local/bin/etcdctl", mode: "0755" }
